tests/baselines/reference/stringNamedPropertyDuplicates.errors.txt
==== tests/cases/compiler/stringNamedPropertyDuplicates.ts (6 errors) ====
    class C {
        "a b": number;
        "a b": number;
        ~~~~~
!!! error TS2000: Duplicate identifier '"a b"'.
        static "c d": number;
        static "c d": number;
               ~~~~~
!!! error TS2000: Duplicate identifier '"c d"'.
    }
    
    interface I {
        "a b": number;
        "a b": number;
        ~~~~~
!!! error TS2000: Duplicate identifier '"a b"'.
    }
    
    var a: {
        "a b": number;
        "a b": number;
        ~~~~~
!!! error TS2000: Duplicate identifier '"a b"'.
    }
    
    var b = {
        "a b": 1
        "a b": 1
        ~~~~~
!!! error TS1005: ',' expected.
        ~~~~~~~~
!!! error TS2000: Duplicate identifier '"a b"'.
    }